# python_active_inference

./: .gitignore  README.md  pyproject.toml
PyAIF/: __init__.py  aif_agent.py  utils.py
examples/handover_task_single_agent/: environment.py  generative_model.py  generative_model_new.py  main.py
examples/learning_under_uncertinity/: README.md  aleotric_uncertainity.py  epistemic_uncertainity.py  main.py
