[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyAIF"
version = "0.1.0"
description = "A Python package for Active Inference agents and simulations"
authors = [
  { name = "Diluna A. Warnakulasuriya" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib"
]

[project.urls]
Homepage = "https://github.com/Diluna98/python_active_inference"
